--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     "participants": [
       {"id":"susanne","name":"Susanne Afzelius","color":"#6a6cc7"},
       {"id":"annsofie","name":"Ann-Sofie Stendalen","color":"#d17a22"},
-      {"id":"robin","name":"Robin Ingbrandt","color":"#1f8f77"},
+      {"id":"robin","name":"Robin Ingbrant","color":"#1f8f77"},
       {"id":"christian","name":"Christian Vestas","color":"#0d9488"},
       {"id":"tony","name":"Tony Ring","color":"#7c3aed"}
     ],
@@ -297,8 +297,7 @@
       {"type":"message","from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑","delayMs":2000},
       {"type":"typing","from":"susanne","ms":1000},
       {"type":"message","from":"susanne","text":"Nej tack Tony, vi klarar oss utan dig👋","mediaData":{"replyTo":{"from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑"}},"delayMs":4000},
-      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000},
-      
+      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000}
     ]
   }
   </script>
