--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
       {"type":"message","from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑","delayMs":2000},
       {"type":"typing","from":"susanne","ms":1000},
       {"type":"message","from":"susanne","text":"Nej tack Tony, vi klarar oss utan dig👋","mediaData":{"replyTo":{"from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑"}},"delayMs":4000},
-      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000}
+      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000},
+      {"type":"typing","from":"robin","ms":1800},
+      {"type":"message","from":"robin","text":"Hahaha 😂 Okej men nu på allvar då. Vi behöver planera för 23 oktober. Alla chefer, förmiddag + lunch.","delayMs":7000},
     ]
   }
   </script>
