--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     "participants": [
       {"id":"susanne","name":"Susanne Afzelius","color":"#6a6cc7"},
       {"id":"annsofie","name":"Ann-Sofie Stendalen","color":"#d17a22"},
-      {"id":"robin","name":"Robin Ingbrant","color":"#1f8f77"},
+      {"id":"robin","name":"Robin Ingbrandt","color":"#1f8f77"},
       {"id":"christian","name":"Christian Vestas","color":"#0d9488"},
       {"id":"tony","name":"Tony Ring","color":"#7c3aed"}
     ],
@@ -297,8 +297,13 @@
       {"type":"message","from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑","delayMs":2000},
       {"type":"typing","from":"susanne","ms":1000},
       {"type":"message","from":"susanne","text":"Nej tack Tony, vi klarar oss utan dig👋","mediaData":{"replyTo":{"from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑"}},"delayMs":4000},
-      {"type":"typing","from":"robin","ms":1800},
-      {"type":"message","from":"robin","text":"Hahaha 😂 Okej men nu på allvar då. Vi behöver planera för 23 oktober. Alla chefer, förmiddag + lunch.","delayMs":7000},
+      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000}
+      {"type":"typing","from":"christian","ms":1500},
+      {"type":"message","from":"christian","text":"Budgeten ser tight ut, om något ska bokas ta något billigt 🫣.","delayMs":6000},
+      {"type":"join","user":"tony","delayMs":1500},
+      {"type":"typing","from":"tony","ms":1200},
+      {"type":"typing","from":"christian","ms":800},
+      {"type":"message","from":"christian","text":"Alltså det finns en slant men inga fantasisummor 🤑","delayMs":250},
     ]
   }
   </script>
