--- a/index.html
+++ b/index.html
@@ -297,13 +297,7 @@
       {"type":"message","from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑","delayMs":2000},
       {"type":"typing","from":"susanne","ms":1000},
       {"type":"message","from":"susanne","text":"Nej tack Tony, vi klarar oss utan dig👋","mediaData":{"replyTo":{"from":"tony","text":"Jag kan köra en stund för typ 10 000 🤑"}},"delayMs":4000},
-      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000},
-      {"type":"typing","from":"christian","ms":1500},
-      {"type":"message","from":"christian","text":"Budgeten ser tight ut, om något ska bokas ta något billigt 🫣.","delayMs":6000},
-      {"type":"join","user":"tony","delayMs":1500},
-      {"type":"typing","from":"tony","ms":1200},
-      {"type":"typing","from":"christian","ms":800},
-      {"type":"message","from":"christian","text":"Alltså det finns en slant men inga fantasisummor 🤑","delayMs":250},
+      {"type":"remove","removedBy":"susanne","removedUser":"tony","delayMs":3000}
     ]
   }
   </script>
